--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -8,7 +8,13 @@
 
 
 <body>
-  <h1>Some famous Computer Scientists</h1>
+  <h1>Recepeit!</h1>
+
+  <form id ='recipeSearch'>
+
+  Search for recipes: <input id="searchVal">
+  <button type='submit'>Search</button>
+  </form>
   <div>{{data}}</div>
 
   <div>
