connected to real db and started work on front page

--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -17,11 +17,9 @@
   <button type='submit'>Search</button>
   </form>
 
-  <div>{{data}}</div>
-
   <div>
     {% for n in data %}
-    <div>{{n}}</div>
+    <div><a href="/recipePage/{{n}}">{{n}}</a></div>
     {% endfor %}
   </div>
 
