--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -11,10 +11,11 @@
 
   <h1>Recepeit!</h1>
 
-  <form id ='recipeSearch'>
+  <form method ="post">
 
-  Search for recipes: <input id="searchVal">
-  <button type='submit'>Search</button>
+    <label for="searchVal">Search for recipes:</label>
+    <input name="searchVal" />
+    <button type='submit'>Search</button>
   </form>
 
   <div>
