added search feature

--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -11,7 +11,7 @@
 
   <h1>Recepeit!</h1>
 
-  <form method ="post">
+  <form method ="get">
 
     <label for="searchVal">Search for recipes:</label>
     <input name="searchVal" />
