--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -20,7 +20,7 @@
 
   <div>
     {% for n in data %}
-    <div><a href="/recipePage/{{n}}">{{n}}</a></div>
+    <div><a href="/recipePage/{{n.id}}">{{n.name}}</a></div>
     {% endfor %}
   </div>
 
