added 404, modified recipe template

--- a/webserver/templates/recipePage.html
+++ b/webserver/templates/recipePage.html
@@ -9,12 +9,21 @@
 
 <body>
 
-  <h1>{{r_id}}</h1>
+  <h1>{{name}}</h1>
 
   <div>
-    r_instr
-    r_time
-    r_user
+    Posted by: {{user}}
+  </div>
+  <br>
+  <div>
+    Preparation Time: {{time}}
+  </div>
+  <br>
+  <div>
+    Instructions:
+    <div>
+      {{instr}}
+    </div>
   </div>
 
 </body>
