--- a/webserver/templates/recipePage.html
+++ b/webserver/templates/recipePage.html
@@ -14,18 +14,26 @@
   <div>
     Posted by: {{user}}
   </div>
+  
   <br>
+  
   <div>
     Preparation Time: {{time}}
   </div>
+  
   <br>
+  
   <div>
     Instructions:
     <div>
       {{instr}}
     </div>
   </div>
+  <br>
 
+  <div>
+    Average Rating: {{rating|round(2,'floor')}}
+  </div>
 </body>
 
 
