--- a/webserver/templates/recipePage.html
+++ b/webserver/templates/recipePage.html
@@ -1,13 +1,5 @@
-<html>
-  <style>
-    body{ 
-      font-size: 15pt;
-      font-family: arial;
-    }
-  </style>
 
-
-<body>
+  {% include 'header.html' %}
 
   <h1>{{name}}</h1>
 
@@ -64,8 +56,6 @@
     {% endfor %}
   </div>
   
-  
-</body>
+    {% include 'footer.html' %}
 
 
-</html>
