--- a/webserver/templates/404.html
+++ b/webserver/templates/404.html
@@ -1,17 +1,6 @@
-<html>
-  <style>
-    body{ 
-      font-size: 15pt;
-      font-family: arial;
-    }
-  </style>
 
-
-<body>
+  {% include 'header.html' %}
 
   <h1>404 Error</h1>
 
-</body>
-
-
-</html>
+  {% include 'footer.html' %}
