started user page

--- a/webserver/templates/recipePage.html
+++ b/webserver/templates/recipePage.html
@@ -8,8 +8,8 @@
 
 
 <body>
-
-  <h1>{{name}}</h1>
+  <h1 class="noStyleLink"><a href='/'>Recepeit!</a></h1>
+  <h2>{{name}}</h2>
 
   <div>
     Posted by: {{user}}
