--- a/webserver/templates/header.html
+++ b/webserver/templates/header.html
@@ -22,7 +22,7 @@
       </form>
     
     {% else %}
-      You are logged in as {{session.username}}.
+      You are logged in as <a href='/user/{{session.userId}}'>{{session.username}}</a>.
       <a href='/logout'>Logout</a>
     {% endif %}
     </div>
