--- a/webserver/templates/user.html
+++ b/webserver/templates/user.html
@@ -5,7 +5,7 @@
   
   
   <div>
-    Recipes posted by you:
+    Recipes posted by {{name}}:
     {% for n in recipes %}
     <div><a href="/recipePage/{{n.id}}">{{n.name}}</a></div>
     {% endfor %}
@@ -25,7 +25,7 @@
   <div>
     Grocery List:
     {% for n in grocery %}
-    <div>{{n}}</div>
+    <div><a href='/ingredient/{{n.id}}'>{{n.name}}</a></div>
     {% endfor %}
   </div>
   
@@ -34,7 +34,7 @@
   <div>
     Suggested ingredients:
     {% for n in sugg %}
-    <div>{{n}}</div>
+    <div><a href='/ingredient/{{n.id}}'>{{n.name}}</a></div>
     {% endfor %}
   </div>
   
