--- a/webserver/static/styles.css
+++ b/webserver/static/styles.css
@@ -20,3 +20,11 @@
 	float: right;
 	text-align: right;
 }
+.loginForm{
+	margin-bottom: 0px;
+}
+.options{
+	height: 6em; 
+	width: 12em;
+	overflow: auto;
+}
