--- a/webserver/templates/header.html
+++ b/webserver/templates/header.html
@@ -1,5 +1,5 @@
 <html>
-  <title>Recepit!</title>
+  <title>Recipeit!</title>
   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
   <style>
     body{ 
@@ -10,7 +10,7 @@
 <body>
 
   <div class = 'header'>
-    <h1 class="noStyleLink"><a href='/'>Recepeit!</a></h1>
+    <h1 class="noStyleLink"><a href='/'>Recipeit!</a></h1>
 
     <div class = 'login'>
     {%if not session.logged_in %}
