--- a/webserver/templates/newRecipe.html
+++ b/webserver/templates/newRecipe.html
@@ -29,6 +29,7 @@
 				 <br>
 				{%endfor%}
 				</div>
+			<button type = 'submit'>Recipeit!</button>
 		</form>
 	{%endif%}
 {% include 'footer.html' %}
