--- a/webserver/templates/recipePage.html
+++ b/webserver/templates/recipePage.html
@@ -4,6 +4,10 @@
 
   <h2>{{name}}</h2>
 
+  <form method ="post" action="{{ url_for('favoriteRecipe', recipe_id = recipe_id ) }}">
+    <button type='submit'>Favorite</button>
+  </form>
+
   <div>
     Posted by: {{user}}
   </div>
@@ -61,13 +65,34 @@
   </div>
   
   <br>
-  
+  {%if session.logged_in %}
+  Rate and Comment
+    <form method="post" action="{{ url_for('comment', r_id=recipe_id) }}">
+      Rating
+      <select name ='rating'>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+      </select>
+      <textarea rows="4" cols="50" name="comment"> </textarea>
+      <button type="submit">Submit</button>
+    </form>
+  {% endif %}
   <div>
+
     User Comments:
     {% for n in comments %}
-    <div><a href = '/user/{{n.id}}'>{{n.username}}</a> wrote: </div>
+    <div><a href = '/user/{{n.id}}'>{{n.username}} </a> ({{n.rating}}/10) wrote: </div>
     <div>{{n.description}}</div>
-    <br>
+    <hr>
+
     {% endfor %}
   </div>
   
