--- a/webserver/templates/ingredient.html
+++ b/webserver/templates/ingredient.html
@@ -2,6 +2,8 @@
   {% include 'header.html' %}
 
   <h2>{{ingredient.name}}</h2>
+
+  Description: {{ingredient.description}}
   
   <form method ="post" action="{{ url_for('addIngredient', ingredient_id = ingredient.id ) }}">
     <button type='submit'>Add</button>
